--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 			<div class="continer">
 				<h3>Personal Details</h3>
 				<br>Date of Birth :- 12th April, 1999
-				<br>Address :- A/65 Hariom Nager;
+				<br>Address :- A/65 Hariom Nagar;
 				<br>		   Ghodasar;
 				<br>		   Ahmedabad-380050;
 				<br>		   Gujarat.
